# Battery-Allocation-Problem

./: README.md  Tetuan-City Power Optimized.csv  battery_allocator.py  circuit_input_generator.ipynb  pyproject.toml  readme.md
