[project]
name = "quac603"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "pennylane>=0.38.0",
    "pylatexenc>=2.10",
    "qiskit>=2.1.2",
    "qiskit-aer>=0.17.1",
    "qiskit-algorithms>=0.4.0",
    "qiskit-ibm-runtime>=0.41.1",
    "qiskit-optimization>=0.7.0",
    "sympy>=1.14.0",
]
[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
jupiter = "uv run --with jupyter jupyter lab"
